Fix stop points dark mode

--- a/_sass/variables-dark.scss
+++ b/_sass/variables-dark.scss
@@ -11,7 +11,7 @@ $text-muted-dark: rgba(283,283,283,.8);
 
 // LAYOUT
 $body-bg-dark: #222;
-$body-bg-gradient-dark: linear-gradient(220deg, rgba($body-bg-dark,1) 0%, rgba($body-bg-dark,1) 20%, rgba(81,112,78,1) 20%, rgba(81,112,78,1) 25%, rgba(203,106,115,1) 25%, rgba(203,106,115,1) 30%, rgba(182,81,145,1) 30%, rgba(182,81,145,1) 35%, rgba(81,105,182,1) 35%, rgba(81,105,182,1) 40%, rgba(255,117,11,1) 40%, rgba(255,117,11,1) 45%, rgba($body-bg-dark,1) 45%);
+$body-bg-gradient-dark: linear-gradient(220deg, rgba($body-bg-dark,1) 0%, rgba($body-bg-dark,1) 200px, rgba(81,112,78,1) 200px, rgba(81,112,78,1) 300px, rgba(203,106,115,1) 300px, rgba(203,106,115,1) 400px, rgba(182,81,145,1) 400px, rgba(182,81,145,1) 500px, rgba(81,105,182,1) 500px, rgba(81,105,182,1) 600px, rgba(255,117,11,1) 600px, rgba(255,117,11,1) 700px, rgba($body-bg-dark,1) 700px);
 $body-color-dark: #fff;
 
 $content-bg-dark: rgba($body-bg-dark,.7);
